[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"
authors = ["evin"]
description = "rproxy: a chainable proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
http = "1.0.0"
http-body-util = "0.1.0"
httparse = "1.8.0"
hyper = { version = "1.0.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.1", features = ["http1", "tokio", "client", "server"] }
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
socket2 = "0.5.5"
socks5-impl = "0.5.8"
thiserror = "1.0.51"
tokio = { version = "1.34.0", features = ["full"] }
tokio-rustls = "0.25.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
url = "2.5.0"
webpki-roots = "0.26.0"
